--- a/TMBO/Views/TMBOLoadingCell.xib
+++ b/TMBO/Views/TMBOLoadingCell.xib
@@ -46,13 +46,13 @@
 								<string key="NSFrame">{{150, 12}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="760188440"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="809077152"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIStyle">2</int>
 							</object>
-							<object class="IBUIImageView" id="883631553">
+							<object class="IBUIImageView" id="637612590">
 								<reference key="NSNextResponder" ref="760188440"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrameSize">{320, 11}</string>
@@ -68,13 +68,13 @@
 									<string key="NSResourceName">tornTop.png</string>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="650607941">
+							<object class="IBUIImageView" id="809077152">
 								<reference key="NSNextResponder" ref="760188440"/>
 								<int key="NSvFlags">266</int>
 								<string key="NSFrame">{{0, 33}, {320, 11}}</string>
 								<reference key="NSSuperview" ref="760188440"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="701185988"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<int key="IBUIContentMode">8</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -84,11 +84,25 @@
 									<string key="NSResourceName">tornBottom.png</string>
 								</object>
 							</object>
+							<object class="IBUIImageView" id="701185988">
+								<reference key="NSNextResponder" ref="760188440"/>
+								<int key="NSvFlags">266</int>
+								<string key="NSFrame">{{0, 44}, {320, 1}}</string>
+								<reference key="NSSuperview" ref="760188440"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">cellSeparator.png</string>
+								</object>
+							</object>
 						</array>
-						<string key="NSFrameSize">{320, 43}</string>
+						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="407445343"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="883631553"/>
+						<reference key="NSNextKeyView" ref="637612590"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -101,7 +115,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 44}</string>
+				<string key="NSFrameSize">{320, 45}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="760188440"/>
@@ -124,7 +138,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">topBanner</string>
 						<reference key="source" ref="407445343"/>
-						<reference key="destination" ref="883631553"/>
+						<reference key="destination" ref="637612590"/>
 					</object>
 					<int key="connectionID">21</int>
 				</object>
@@ -132,9 +146,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">bottomBanner</string>
 						<reference key="source" ref="407445343"/>
-						<reference key="destination" ref="650607941"/>
+						<reference key="destination" ref="809077152"/>
 					</object>
 					<int key="connectionID">22</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">border</string>
+						<reference key="source" ref="407445343"/>
+						<reference key="destination" ref="701185988"/>
+					</object>
+					<int key="connectionID">24</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -161,8 +183,9 @@
 						<reference key="object" ref="407445343"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="593576066"/>
-							<reference ref="883631553"/>
-							<reference ref="650607941"/>
+							<reference ref="637612590"/>
+							<reference ref="809077152"/>
+							<reference ref="701185988"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -173,13 +196,18 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="883631553"/>
+						<reference key="object" ref="637612590"/>
 						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="407445343"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">18</int>
-						<reference key="object" ref="650607941"/>
+						<reference key="object" ref="809077152"/>
+						<reference key="parent" ref="407445343"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">23</int>
+						<reference key="object" ref="701185988"/>
 						<reference key="parent" ref="407445343"/>
 					</object>
 				</array>
@@ -191,6 +219,7 @@
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.CustomClassName">TMBOLoadingCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -198,7 +227,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">22</int>
+			<int key="maxID">24</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -236,6 +265,7 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="cellSeparator.png">{1, 1}</string>
 			<string key="tornBottom.png">{1260, 11}</string>
 			<string key="tornTop.png">{1260, 11}</string>
 		</dictionary>
