--- a/TMBO/Views/TMBOUploadCell.xib
+++ b/TMBO/Views/TMBOUploadCell.xib
@@ -34,7 +34,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUITableViewCell" id="865055105">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">290</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="436666529">
@@ -46,6 +46,7 @@
 								<int key="NSvFlags">300</int>
 								<string key="NSFrameSize">{58, 44}</string>
 								<reference key="NSSuperview" ref="436666529"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="806624907"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -56,6 +57,7 @@
 								<int key="NSvFlags">295</int>
 								<string key="NSFrame">{{63, 3}, {171, 20}}</string>
 								<reference key="NSSuperview" ref="436666529"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="528698610"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -88,8 +90,9 @@
 							<object class="IBUILabel" id="528698610">
 								<reference key="NSNextResponder" ref="436666529"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{63, 23}, {195, 18}}</string>
+								<string key="NSFrame">{{63, 24}, {195, 18}}</string>
 								<reference key="NSSuperview" ref="436666529"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="469496628"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -118,8 +121,10 @@
 							<object class="IBUILabel" id="469496628">
 								<reference key="NSNextResponder" ref="436666529"/>
 								<int key="NSvFlags">265</int>
-								<string key="NSFrame">{{237, 23}, {78, 18}}</string>
+								<string key="NSFrame">{{237, 24}, {78, 18}}</string>
 								<reference key="NSSuperview" ref="436666529"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="34617833"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -140,6 +145,7 @@
 								<int key="NSvFlags">300</int>
 								<string key="NSFrame">{{19, 12}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="436666529"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="722458671"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -148,9 +154,25 @@
 								<bool key="IBUIAnimating">YES</bool>
 								<int key="IBUIStyle">2</int>
 							</object>
+							<object class="IBUIImageView" id="34617833">
+								<reference key="NSNextResponder" ref="436666529"/>
+								<int key="NSvFlags">266</int>
+								<string key="NSFrame">{{0, 43}, {320, 1}}</string>
+								<reference key="NSSuperview" ref="436666529"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">cellSeparator.png</string>
+								</object>
+							</object>
 						</array>
-						<string key="NSFrameSize">{320, 43}</string>
+						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="865055105"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="428788433"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -164,7 +186,9 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 44}</string>
+				<string key="NSFrameSize">{320, 45}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="436666529"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -242,6 +266,7 @@
 							<reference ref="528698610"/>
 							<reference ref="806624907"/>
 							<reference ref="469496628"/>
+							<reference ref="34617833"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -274,6 +299,11 @@
 						<reference key="object" ref="806624907"/>
 						<reference key="parent" ref="865055105"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">49</int>
+						<reference key="object" ref="34617833"/>
+						<reference key="parent" ref="865055105"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -287,18 +317,63 @@
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="49.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">48</int>
+			<int key="maxID">49</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">TMBOUploadCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="commentsView">UILabel</string>
+						<string key="filenameView">UILabel</string>
+						<string key="spinner">UIActivityIndicatorView</string>
+						<string key="thumbnailView">UIImageView</string>
+						<string key="uploaderView">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="commentsView">
+							<string key="name">commentsView</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filenameView">
+							<string key="name">filenameView</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="spinner">
+							<string key="name">spinner</string>
+							<string key="candidateClassName">UIActivityIndicatorView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="thumbnailView">
+							<string key="name">thumbnailView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="uploaderView">
+							<string key="name">uploaderView</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TMBOUploadCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">cellSeparator.png</string>
+			<string key="NS.object.0">{1, 1}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1929</string>
 	</data>
 </archive>
